k8s-spring/kubernetes_files/app_spring.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-spring-deployment
  namespace: default
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: app-spring-pod
  template:
    metadata:
      labels:
        app: app-spring-pod
    spec:
      containers: 
      - image: "gcr.io/${PROJECT_ID}/app_sprig:${APP_VER}"
        name: app-spring-container
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
