k8s-spring/kubernetes_files/app_spring_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-spring-ingress
  annotations:
    beta.cloud.google.com/backend-config:
      '{"ports": {"http":"config-http", "http2" :"config-http2"}, "default": "app-spring-ingress-backendconfig"}'
    #kubernetes.io/ingress.global-static-ip-name: my-name-address
spec:
  #tls:
  #- hosts:
  #  - dev.mydomain.com.co
  #  secretName: app-spring-ssl-secrets
  rules:
  - http:
      paths:
      - path: "/"
        backend:
          serviceName: app-spring-service
          servicePort: 8080
      
      - path: "/*"
        backend:
          serviceName: app-spring-service
          servicePort: 8080
